--- a/src/app.html
+++ b/src/app.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		%sveltekit.head%
-	</head>
-	<body>
-		%sveltekit.body%
-	</body>
+
+<head>
+	<meta charset="utf-8" />
+	<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
+	<meta name="viewport" content="width=device-width" />
+	%sveltekit.head%
+</head>
+
+<body>
+	%sveltekit.body%
 
 	<script>
 		const isMobileDevice = /Mobi/i.test(window.navigator.userAgent);
@@ -16,4 +17,15 @@
 			document.body.setAttribute('mobile', 'true')
 		}
 	</script>
+
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-7F5H2S5CGJ"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-7F5H2S5CGJ');
+	</script>
+</body>
+
 </html>
