Add share page option

--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,22 @@
 	<meta charset="utf-8" />
 	<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
 	<meta name="viewport" content="width=device-width" />
+	
+	<!-- Facebook meta -->
+	<meta property="og:title" content="Nova Trilha"/>
+	<meta property="og:type" content="non_profit"/>
+	<meta property="og:description" content="Ainda não sabe em quem votar para deputado federal e estadual? A Trilha lista pra você todas as candidaturas de partidos de esquerda na Paraíba"/>
+	<meta property="og:url" content="https://trilha.site"/>
+	<meta property="og:site_name" content="Nova Trilha"/>
+	<meta property="og:image" content="https://trilha.site/icons/logo-footer.svg"/>
+
+	<!-- Twitter meta -->
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:url" content="https://trilha.site">
+	<meta name="twitter:title" content="Nova Trilha">
+	<meta name="twitter:description" content="Ainda não sabe em quem votar para deputado federal e estadual? A Trilha lista pra você todas as candidaturas de partidos de esquerda na Paraíba">
+	<meta name="twitter:image" content="https://trilha.site/icons/logo-footer.svg">
+	
 	%sveltekit.head%
 </head>
 
