Update ref names

--- a/src/app.html
+++ b/src/app.html
@@ -7,19 +7,19 @@
 	<meta name="viewport" content="width=device-width" />
 	
 	<!-- Facebook meta -->
-	<meta property="og:title" content="Nova Trilha"/>
-	<meta property="og:type" content="non_profit"/>
-	<meta property="og:description" content="Ainda não sabe em quem votar para deputado federal e estadual? A Trilha lista pra você todas as candidaturas de partidos de esquerda na Paraíba"/>
+	<meta property="og:title" content="Ainda não sabe em quem votar para deputado federal e estadual?"/>
+	<meta property="og:description" content="A Trilha lista pra você todas as candidaturas de partidos de esquerda na Paraíba"/>
 	<meta property="og:url" content="https://trilha.site"/>
-	<meta property="og:site_name" content="Nova Trilha"/>
-	<meta property="og:image" content="https://trilha.site/icons/logo-footer.svg"/>
+	<meta property="og:image" content="https://trilha.site/icons/thumbnail.jpg"/>
+	<meta property="og:site_name" content="Trilha"/>
+	<meta property="og:type" content="non_profit"/>
 
 	<!-- Twitter meta -->
-	<meta name="twitter:card" content="summary">
+	<meta name="twitter:title" content="Ainda não sabe em quem votar para deputado federal e estadual?">
+	<meta name="twitter:description" content="A Trilha lista pra você todas as candidaturas de partidos de esquerda na Paraíba">
 	<meta name="twitter:url" content="https://trilha.site">
-	<meta name="twitter:title" content="Nova Trilha">
-	<meta name="twitter:description" content="Ainda não sabe em quem votar para deputado federal e estadual? A Trilha lista pra você todas as candidaturas de partidos de esquerda na Paraíba">
-	<meta name="twitter:image" content="https://trilha.site/icons/logo-footer.svg">
+	<meta name="twitter:image" content="https://trilha.site/icons/thumbnail.jpg">
+	<meta name="twitter:card" content="summary">
 	
 	%sveltekit.head%
 </head>
