--- a/src/app.html
+++ b/src/app.html
@@ -10,16 +10,17 @@
 	<meta property="og:title" content="Ainda não sabe em quem votar para deputado federal e estadual?"/>
 	<meta property="og:description" content="A Trilha lista pra você todas as candidaturas de partidos de esquerda na Paraíba"/>
 	<meta property="og:url" content="https://trilha.site"/>
-	<meta property="og:image" content="https://trilha.site/icons/thumbnail.jpg"/>
+	<meta property="og:image" itemprop="image" content="https://trilha.site/icons/thumbnail.jpg"/>
 	<meta property="og:site_name" content="Trilha"/>
-	<meta property="og:type" content="non_profit"/>
+	<meta property="og:type" content="website"/>
+	<meta property="og:updated_time" content="1662310143" />
 
 	<!-- Twitter meta -->
 	<meta name="twitter:title" content="Ainda não sabe em quem votar para deputado federal e estadual?">
 	<meta name="twitter:description" content="A Trilha lista pra você todas as candidaturas de partidos de esquerda na Paraíba">
 	<meta name="twitter:url" content="https://trilha.site">
 	<meta name="twitter:image" content="https://trilha.site/icons/thumbnail.jpg">
-	<meta name="twitter:card" content="summary">
+	<meta name="twitter:card" content="summary_large_image">
 	
 	%sveltekit.head%
 </head>
